Mobile first nav complete. base styling to begin next.

--- a/sass/index.sass
+++ b/sass/index.sass
@@ -1,12 +1,20 @@
-// importing fonts
+// Importing Fonts & Icons
 // TODO: REMOVE UNECESSARY ITEMS BEFOR FINAL DEPLOY
 @import url('https://fonts.googleapis.com/css?family=Corben:400,700')
 @import url('https://fonts.googleapis.com/css?family=Merriweather:300,400,700,900')
 @import url('https://fonts.googleapis.com/css?family=Rokkitt:100,300,400,500,700,900')
 @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900')
+@import 'font-awesome/fontawesome'
+@import 'font-awesome/brands'
+@import 'font-awesome/regular'
+@import 'font-awesome/solid'
 
-// importing partials
+// Importing Partials
 @import 'reset'
 @import 'variables'
 @import 'mixins'
+
+// Importing Styles
 @import 'global'
+@import 'navigation'
+@import 'footer'
