--- a/sass/index.sass
+++ b/sass/index.sass
@@ -1,7 +1,7 @@
 // Importing Fonts & Icons
 // TODO: REMOVE UNECESSARY ITEMS BEFOR FINAL DEPLOY
-@import url('https://fonts.googleapis.com/css?family=Corben:400,700')
-@import url('https://fonts.googleapis.com/css?family=Merriweather:300,400,700,900')
+// @import url('https://fonts.googleapis.com/css?family=Corben:400,700')
+// @import url('https://fonts.googleapis.com/css?family=Merriweather:300,400,700,900')
 @import url('https://fonts.googleapis.com/css?family=Rokkitt:100,300,400,500,700,900')
 @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900')
 @import 'font-awesome/fontawesome'
@@ -13,8 +13,10 @@
 @import 'reset'
 @import 'variables'
 @import 'mixins'
-
-// Importing Styles
 @import 'global'
 @import 'navigation'
 @import 'footer'
+
+// Importing Page Styles
+@import 'home'
+@import 'about'
