--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,4 @@
 @charset "UTF-8";
-@import url("https://fonts.googleapis.com/css?family=Corben:400,700");
-@import url("https://fonts.googleapis.com/css?family=Merriweather:300,400,700,900");
 @import url("https://fonts.googleapis.com/css?family=Rokkitt:100,300,400,500,700,900");
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900");
 /*!
@@ -5881,44 +5879,62 @@ button {
 }
 
 body {
+  background: #e2e1e0;
   font: 100% "Source Sans Pro", sans-serif;
+  text-align: center;
 }
 
 h1, h2, h3, h4, h5, h6 {
   font-family: "Rokkitt", serif;
 }
 
-.container {
-  align-content: center;
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: center;
-  margin: 0 auto;
-  text-align: center;
-  width: 98%;
+.card {
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  -webkit-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  -moz-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  -ms-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  -o-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  background-color: #ffffff;
+  color: #000000;
+  border-radius: 2px;
+  display: inline-block;
+  margin: 1rem;
+  position: relative;
 }
 
 .nav-bar {
-  background-color: #dddddd;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  -webkit-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  -moz-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  -ms-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  -o-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  z-index: 1;
+  background-color: #42a5f4;
   color: #000000;
   display: flex;
   font-size: 1.5rem;
   justify-content: space-between;
   position: fixed;
+  top: 0;
   width: 100%;
 }
 .nav-bar .open, .nav-bar .close {
+  -webkit-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  -moz-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  -ms-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  -o-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
   cursor: pointer;
-  padding: 1rem;
-  transition: 0.5s;
+  padding: 0.5rem 1rem;
 }
 .nav-bar .open:hover, .nav-bar .close:hover {
-  color: #555555;
+  color: #ffd740;
 }
 .nav-bar .branding {
   font-weight: 700;
-  padding: 1rem;
-  transition: 0.25s;
+  padding: 0.5rem 1rem;
 }
 .nav-bar .branding i {
   font-size: 1.25rem;
@@ -5926,16 +5942,21 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .site-nav {
-  width: 0;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  -webkit-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  -moz-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  -ms-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  -o-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  background-color: #42a5f4;
+  color: #000000;
   overflow-x: hidden;
+  width: 0;
   height: 100vh;
-  z-index: 1;
+  z-index: 2;
   position: fixed;
   top: 0;
   left: 0;
-  background-color: #dddddd;
-  color: #000000;
-  transition: 0.5s;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -5945,9 +5966,9 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 1.5rem;
   display: block;
   text-decoration: none;
-  transition: 0.25s;
 }
 .site-nav .nav-bar {
+  box-shadow: none;
   position: relative;
 }
 .site-nav .nav-links {
@@ -5955,24 +5976,129 @@ h1, h2, h3, h4, h5, h6 {
   text-align: right;
 }
 .site-nav .nav-links a {
-  margin: 0.75rem 0;
+  -webkit-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  -moz-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  -ms-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  -o-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  margin: 0.5rem 0;
 }
 .site-nav .nav-links a li {
   margin-right: 2rem;
 }
 .site-nav .nav-links a:hover {
-  background-color: #eeeeee;
+  color: #ffff74;
 }
 .site-nav .nav-links .contact i {
-  background-color: #000000;
-  color: #ffffff;
+  background-color: #0077c1;
+  color: #42a5f4;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  -webkit-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  -moz-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  -ms-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  -o-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  margin-top: 1rem;
   padding: 1rem;
   border-radius: 50%;
-  transition: 0.25s;
 }
 .site-nav .nav-links .contact i:hover {
-  background-color: #555555;
+  background-color: #80d6ff;
+  color: #0077c1;
+  box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
+  -webkit-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  -moz-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  -ms-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  -o-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
 }
-.site-nav .nav-links .contact:hover {
-  background-color: #dddddd;
+.site-nav .action-buttons {
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 2rem;
+}
+.site-nav .action-buttons li {
+  background-color: #0077c1;
+  color: #42a5f4;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  -webkit-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  -moz-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  -ms-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  -o-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  color: black;
+  padding: 0.5rem 2.5rem;
+}
+.site-nav .action-buttons li:hover {
+  background-color: #80d6ff;
+  color: #0077c1;
+  box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
+  -webkit-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  -moz-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  -ms-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  -o-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+}
+.site-nav .action-buttons li:hover {
+  color: black;
+}
+.site-nav .action-buttons .join {
+  background-color: #ffd740;
+}
+.site-nav .action-buttons .join:hover {
+  background-color: #ffff74;
+}
+
+.home-header {
+  height: 100vh;
+  width: 100vw;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.home-header .call-to-action {
+  margin-top: 3rem;
+  padding: 1rem;
+  font-size: 2rem;
+  font-weight: 600;
+}
+.home-header .call-to-action span {
+  color: #0077c1;
+  text-transform: uppercase;
+  font-weight: 900;
+}
+.home-header .call-to-action .join {
+  background-color: #0077c1;
+  color: #42a5f4;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  -webkit-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  -moz-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  -ms-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  -o-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  display: block;
+  margin: 1rem 2rem 0 2rem;
+  padding: 0.5rem 2.5rem;
+  background-color: #ffd740;
+}
+.home-header .call-to-action .join:hover {
+  background-color: #80d6ff;
+  color: #0077c1;
+  box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
+  -webkit-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  -moz-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  -ms-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  -o-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+}
+.home-header .call-to-action .join:hover {
+  background-color: #ffff74;
+}
+.home-header .scroll p {
+  font-size: 0.75rem;
+}
+.home-header .scroll i {
+  margin-top: -0.5rem;
+  font-size: 2rem;
 }
