--- a/sass/_navigation.sass
+++ b/sass/_navigation.sass
@@ -15,6 +15,13 @@
     padding: .5rem 1rem
     &:hover
       color: $secondary-color
+    span
+      font-family: $main-font-stack
+      font-weight: 600
+      text-transform: uppercase
+      margin-left: .75rem
+      font-size: 1rem
+      vertical-align: middle
   .branding
     font-weight: 700
     padding: .5rem 1rem
