--- a/sass/_global.sass
+++ b/sass/_global.sass
@@ -1,3 +1,8 @@
+html
+  box-sizing: border-box
+  *, *:before, *:after
+    box-sizing: inherit
+
 body
   background: $background-color
   font: 100% $main-font-stack
@@ -6,15 +11,11 @@ body
 h1, h2, h3, h4, h5, h6
   font-family: $header-font-stack
 
-// .container
-//   margin-top: 4rem
-//   width: 100%
-
 .card
   +level1
   background-color: $card-bg-color
   color: $primary-font-color
   border-radius: 2px
-  display: inline-block
+  display: block
   margin: 1rem
   position: relative
