--- a/sass/_home.sass
+++ b/sass/_home.sass
@@ -1,31 +1,103 @@
-.home-header
-  height: 100vh
-  width: 100vw
-  margin: 0
-  display: flex
-  flex-direction: column
-  justify-content: space-between
-
-  .call-to-action
-    margin-top: 3rem
-    padding: 1rem
-    font-size: 2rem
-    font-weight: 600
-    span
-      color: $primary-color-dark
-      text-transform: uppercase
-      font-weight: 900
-    .join
-      +button
-      display: block
-      margin: 1rem 2rem 0 2rem
-      padding: .5rem 2.5rem
-      background-color: $secondary-color
-      &:hover
-        background-color: $secondary-color-light
-  .scroll
-    p
-      font-size: .75rem
-    i
-      margin-top: -.5rem
+.home
+  .header
+    background: url(../img/checking_boxes.svg) no-repeat center
+    background-color: $card-bg-color
+    background-size: contain
+    height: 100vh
+    width: 100%
+    margin: 0
+    display: flex
+    flex-direction: column
+    justify-content: space-between
+    .call-to-action
+      margin-top: 3rem
+      padding: 1rem
       font-size: 2rem
+      font-weight: 600
+      text-shadow: 0 0 5px $card-bg-color
+      span
+        color: $primary-color-dark
+        text-transform: uppercase
+        font-weight: 900
+    .scroll
+      line-height: .5rem
+      p
+        font-size: .75rem
+        text-shadow: 0 0 5px $card-bg-color
+      i
+        font-size: 1rem
+      .join
+        +button
+        display: inline-block
+        font-size: 2rem
+        font-weight: 900
+        margin: 2rem
+        padding: 1rem 2.5rem
+        background-color: $secondary-color
+        &:hover
+          background-color: $secondary-color-light
+
+  .tabs
+    width: 100%
+    margin: 1rem 0
+    .card
+      position: relative
+      .tab-links
+        width: 100%
+        background-color: $primary-color
+        display: flex
+        flex-flow: row-wrap
+        justify-content: flex-start
+        .tab-link
+          +button
+          margin: .5rem
+          padding: .25rem .75rem
+          font-weight: 600
+          border-radius: 1rem
+          color: $card-bg-color
+          &:hover
+            background-color: $primary-color
+            color: $secondary-color-light
+      .arrow
+        cursor: pointer
+        position: absolute
+        color: $primary-color-dark
+        top: 50%
+        font-size: 2rem
+        text-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24)
+        +transition
+        &:hover
+          text-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22)
+      .prev
+        left: .5rem
+      .next
+        right: .5rem
+      .tab-items
+        .call-tag
+          font-weight: 700
+          font-size: 1.5rem
+          padding: .25rem
+        .tab-item
+          margin: 1rem 3rem
+          h1
+            font-weight: 700
+            text-align: left
+          p
+            margin: 1rem 0
+          a
+            +button
+            font-size: 1.5rem
+            display: inline-block
+            text-decoration: none
+            font-weight: 600
+            margin: 0 1rem 1rem 1rem
+            padding: 0 2.5rem
+            background-color: $secondary-color
+            &:hover
+              background-color: $secondary-color-light
+          .image
+            width: 100%
+            height: 10rem
+            background: url(../img/checking_boxes.svg) no-repeat center
+            // background-color: $primary-color-dark
+            background-size: contain
