home page desktop and mobile views complete with changes made for phablet and tablet. more pages incoming

--- a/sass/_mixins.sass
+++ b/sass/_mixins.sass
@@ -42,6 +42,7 @@
 =button()
   background-color: $primary-color-dark
   color: $primary-color
+  border-radius: 2px
   +level1
   &:hover
     background-color: $primary-color-light
