--- a/css/index.css
+++ b/css/index.css
@@ -5910,6 +5910,19 @@ h1, h2, h3, h4, h5, h6 {
   position: relative;
 }
 
+.overlay:after {
+  content: "";
+  display: block;
+  position: fixed;
+  padding: 100px 0;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 2;
+}
+
 .nav-bar {
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   -webkit-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
@@ -5923,9 +5936,16 @@ h1, h2, h3, h4, h5, h6 {
   display: flex;
   font-size: 1.5rem;
   justify-content: space-between;
+  align-items: center;
   position: fixed;
   top: 0;
   width: 100%;
+}
+.nav-bar a {
+  color: #000000;
+  font-size: 1.5rem;
+  display: block;
+  text-decoration: none;
 }
 .nav-bar .open, .nav-bar .close {
   -webkit-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
@@ -5947,6 +5967,11 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 1rem;
   vertical-align: middle;
 }
+@media (min-width: 1000px) {
+  .nav-bar .open, .nav-bar .close {
+    display: none;
+  }
+}
 .nav-bar .branding {
   font-weight: 700;
   padding: 0.5rem 1rem;
@@ -5954,6 +5979,169 @@ h1, h2, h3, h4, h5, h6 {
 .nav-bar .branding i {
   font-size: 1.25rem;
   padding-right: 0.25rem;
+}
+.nav-bar .nav-links {
+  display: none;
+  justify-content: center;
+}
+@media (min-width: 1000px) {
+  .nav-bar .nav-links {
+    display: flex;
+  }
+}
+.nav-bar .nav-links a {
+  font-size: 1.25rem;
+  padding: 0.5rem 1rem;
+  font-weight: 600;
+  color: #ffffff;
+}
+.nav-bar .nav-links a:hover {
+  color: #ffd740;
+}
+.nav-bar .action-buttons {
+  display: none;
+}
+@media (min-width: 1000px) {
+  .nav-bar .action-buttons {
+    display: flex;
+  }
+}
+.nav-bar .action-buttons a, .nav-bar .action-buttons span {
+  background-color: #0077c1;
+  color: #42a5f4;
+  border-radius: 2px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  -webkit-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  -moz-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  -ms-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  -o-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  color: black;
+  font-size: 1rem;
+  padding: 0.5rem 1.5rem;
+  margin: 0.5rem;
+  list-style: none;
+}
+.nav-bar .action-buttons a:hover, .nav-bar .action-buttons span:hover {
+  background-color: #80d6ff;
+  color: #0077c1;
+  box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
+  -webkit-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  -moz-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  -ms-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  -o-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+}
+.nav-bar .action-buttons a:hover, .nav-bar .action-buttons span:hover {
+  color: black;
+}
+.nav-bar .action-buttons .join {
+  background-color: #ffd740;
+}
+.nav-bar .action-buttons .join:hover {
+  background-color: #ffff74;
+}
+.nav-bar .action-buttons .join p {
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
+
+.join-popup {
+  display: none;
+  font-family: "Source Sans Pro", sans-serif;
+  font-weight: 600;
+  margin: 0;
+  padding: 1rem 4rem;
+  z-index: 3;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateY(-50%) translateX(-50%);
+}
+.join-popup .join-close {
+  background-color: #0077c1;
+  color: #42a5f4;
+  border-radius: 2px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  -webkit-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  -moz-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  -ms-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  -o-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  position: absolute;
+  top: 0;
+  right: 0;
+  font-size: 1rem;
+  line-height: 0.75rem;
+  color: #ffffff;
+  padding: 0.5rem;
+  margin: 0.25rem;
+  border-radius: 50%;
+}
+.join-popup .join-close:hover {
+  background-color: #80d6ff;
+  color: #0077c1;
+  box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
+  -webkit-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  -moz-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  -ms-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  -o-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+}
+.join-popup .join-close:hover {
+  color: #ffff74;
+}
+.join-popup h1 {
+  font-size: 1.5rem;
+  margin: 1rem 0;
+}
+.join-popup div {
+  display: flex;
+  justify-content: space-around;
+}
+.join-popup div a {
+  background-color: #0077c1;
+  color: #42a5f4;
+  border-radius: 2px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  -webkit-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  -moz-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  -ms-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  -o-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  color: #000000;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 1rem;
+  padding: 0.5rem 1.5rem;
+  margin: 0.5rem;
+}
+.join-popup div a:hover {
+  background-color: #80d6ff;
+  color: #0077c1;
+  box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
+  -webkit-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  -moz-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  -ms-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  -o-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+}
+.join-popup div a:hover {
+  color: black;
+}
+.join-popup div .join {
+  background-color: #ffd740;
+}
+.join-popup div .join:hover {
+  background-color: #ffff74;
+}
+.join-popup div .join p {
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
+
+.join-popup.active {
+  display: inherit;
 }
 
 .site-nav {
@@ -5968,13 +6156,18 @@ h1, h2, h3, h4, h5, h6 {
   overflow-x: hidden;
   width: 0;
   height: 100vh;
-  z-index: 2;
+  z-index: 3;
   position: fixed;
   top: 0;
   left: 0;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+}
+@media (min-width: 501px) {
+  .site-nav {
+    max-width: 400px;
+  }
 }
 .site-nav a {
   color: #000000;
@@ -6007,6 +6200,7 @@ h1, h2, h3, h4, h5, h6 {
 .site-nav .nav-links .contact i {
   background-color: #0077c1;
   color: #42a5f4;
+  border-radius: 2px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   -webkit-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
   -moz-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
@@ -6029,12 +6223,15 @@ h1, h2, h3, h4, h5, h6 {
 }
 .site-nav .action-buttons {
   display: flex;
+  align-items: flex-end;
   justify-content: space-around;
+  margin-top: -8rem;
   margin-bottom: 2rem;
 }
-.site-nav .action-buttons li {
+.site-nav .action-buttons a {
   background-color: #0077c1;
   color: #42a5f4;
+  border-radius: 2px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   -webkit-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
   -moz-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
@@ -6044,7 +6241,7 @@ h1, h2, h3, h4, h5, h6 {
   color: black;
   padding: 0.5rem 2.5rem;
 }
-.site-nav .action-buttons li:hover {
+.site-nav .action-buttons a:hover {
   background-color: #80d6ff;
   color: #0077c1;
   box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
@@ -6054,14 +6251,19 @@ h1, h2, h3, h4, h5, h6 {
   -o-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
   transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
 }
-.site-nav .action-buttons li:hover {
+.site-nav .action-buttons a:hover {
   color: black;
 }
 .site-nav .action-buttons .join {
   background-color: #ffd740;
+  margin-top: 1.5rem;
 }
 .site-nav .action-buttons .join:hover {
   background-color: #ffff74;
+}
+.site-nav .action-buttons .join p {
+  font-size: 0.75rem;
+  line-height: 1rem;
 }
 
 footer.card {
@@ -6108,6 +6310,7 @@ footer.card {
 .home .header .scroll .join {
   background-color: #0077c1;
   color: #42a5f4;
+  border-radius: 2px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   -webkit-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
   -moz-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
@@ -6140,6 +6343,7 @@ footer.card {
 }
 .home .tabs .card {
   position: relative;
+  padding-bottom: 1rem;
 }
 .home .tabs .card .tab-links {
   width: 100%;
@@ -6147,10 +6351,17 @@ footer.card {
   display: flex;
   flex-flow: row-wrap;
   justify-content: flex-start;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  -webkit-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  -moz-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  -ms-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  -o-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
 }
 .home .tabs .card .tab-links .tab-link {
   background-color: #0077c1;
   color: #42a5f4;
+  border-radius: 2px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   -webkit-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
   -moz-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
@@ -6177,11 +6388,20 @@ footer.card {
   background-color: #42a5f4;
   color: #ffff74;
 }
+.home .tabs .card .tab-links .tab-link.active {
+  background-color: #ffd740;
+  color: #0077c1;
+}
+.home .tabs .card .tab-links .tab-link.active:hover {
+  background-color: #ffff74;
+  color: #42a5f4;
+}
 .home .tabs .card .arrow {
   cursor: pointer;
   position: absolute;
   color: #0077c1;
   top: 50%;
+  transform: translateY(-50%);
   font-size: 2rem;
   text-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   -webkit-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
@@ -6199,24 +6419,35 @@ footer.card {
 .home .tabs .card .next {
   right: 0.5rem;
 }
-.home .tabs .card .tab-items .call-tag {
+.home .tabs .card .card {
+  background-color: #ffffff;
+}
+.home .tabs .card .carousel {
+  display: none;
+  margin: 1rem 0.5rem 0;
+  padding: 0.5rem 1rem;
+}
+.home .tabs .card .carousel .call-tag {
   font-weight: 700;
   font-size: 1.5rem;
   padding: 0.25rem;
+  margin-bottom: 1rem;
 }
-.home .tabs .card .tab-items .tab-item {
-  margin: 1rem 3rem;
+.home .tabs .card .carousel .slide {
+  display: none;
+  margin: 1rem;
 }
-.home .tabs .card .tab-items .tab-item h1 {
+.home .tabs .card .carousel .slide h1 {
   font-weight: 700;
   text-align: left;
 }
-.home .tabs .card .tab-items .tab-item p {
+.home .tabs .card .carousel .slide p {
   margin: 1rem 0;
 }
-.home .tabs .card .tab-items .tab-item a {
+.home .tabs .card .carousel .slide a {
   background-color: #0077c1;
   color: #42a5f4;
+  border-radius: 2px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   -webkit-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
   -moz-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
@@ -6231,7 +6462,7 @@ footer.card {
   padding: 0 2.5rem;
   background-color: #ffd740;
 }
-.home .tabs .card .tab-items .tab-item a:hover {
+.home .tabs .card .carousel .slide a:hover {
   background-color: #80d6ff;
   color: #0077c1;
   box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
@@ -6241,12 +6472,23 @@ footer.card {
   -o-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
   transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
 }
-.home .tabs .card .tab-items .tab-item a:hover {
+.home .tabs .card .carousel .slide a:hover {
   background-color: #ffff74;
 }
-.home .tabs .card .tab-items .tab-item .image {
+.home .tabs .card .carousel .slide .image {
   width: 100%;
   height: 10rem;
   background: url(../img/checking_boxes.svg) no-repeat center;
   background-size: contain;
+}
+@media (min-width: 1000px) {
+  .home .tabs .card .carousel .slide .image {
+    height: 20rem;
+  }
+}
+.home .tabs .card .carousel .slide.active {
+  display: inherit;
+}
+.home .tabs .card .carousel.active {
+  display: inherit;
 }
