--- a/sass/_global.sass
+++ b/sass/_global.sass
@@ -19,3 +19,15 @@ h1, h2, h3, h4, h5, h6
   display: block
   margin: 1rem
   position: relative
+
+.overlay:after
+  content: ""
+  display: block
+  position: fixed
+  padding: 100px 0
+  width: 100%
+  height: 100%
+  top: 0
+  left: 0
+  background-color: rgba(black, 0.5)
+  z-index: 2
