--- a/sass/_home.sass
+++ b/sass/_home.sass
@@ -41,12 +41,14 @@
     margin: 1rem 0
     .card
       position: relative
+      padding-bottom: 1rem
       .tab-links
         width: 100%
         background-color: $primary-color
         display: flex
         flex-flow: row-wrap
         justify-content: flex-start
+        +level1
         .tab-link
           +button
           margin: .5rem
@@ -57,11 +59,18 @@
           &:hover
             background-color: $primary-color
             color: $secondary-color-light
+        .tab-link.active
+          background-color: $secondary-color
+          color: $primary-color-dark
+          &:hover
+            background-color: $secondary-color-light
+            color: $primary-color
       .arrow
         cursor: pointer
         position: absolute
         color: $primary-color-dark
         top: 50%
+        transform: translateY(-50%)
         font-size: 2rem
         text-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24)
         +transition
@@ -71,13 +80,20 @@
         left: .5rem
       .next
         right: .5rem
-      .tab-items
+      .card
+        background-color: $card-bg-color
+      .carousel
+        display: none
+        margin: 1rem .5rem 0
+        padding: .5rem 1rem
         .call-tag
           font-weight: 700
           font-size: 1.5rem
           padding: .25rem
-        .tab-item
-          margin: 1rem 3rem
+          margin-bottom: 1rem
+        .slide
+          display: none
+          margin: 1rem
           h1
             font-weight: 700
             text-align: left
@@ -98,5 +114,10 @@
             width: 100%
             height: 10rem
             background: url(../img/checking_boxes.svg) no-repeat center
-            // background-color: $primary-color-dark
             background-size: contain
+            +breakpoint(desktop)
+              height: 20rem
+        .slide.active
+          display: inherit
+      .carousel.active
+        display: inherit
