--- a/css/index.css
+++ b/css/index.css
@@ -5933,80 +5933,56 @@ h1, h2, h3, h4, h5, h6 {
   z-index: 1;
   background-color: #42a5f4;
   color: #000000;
-  display: flex;
-  font-size: 1.5rem;
-  justify-content: space-between;
-  align-items: center;
   position: fixed;
   top: 0;
   width: 100%;
 }
-.nav-bar a {
+.nav-bar .container {
+  display: flex;
+  font-size: 1.5rem;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  margin: 0 auto;
+}
+@media (min-width: 1000px) {
+  .nav-bar .container {
+    max-width: 1000px;
+  }
+}
+.nav-bar .container a {
   color: #000000;
   font-size: 1.5rem;
   display: block;
   text-decoration: none;
 }
-.nav-bar .open, .nav-bar .close {
-  -webkit-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
-  -moz-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
-  -ms-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
-  -o-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
-  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
-  cursor: pointer;
-  padding: 0.5rem 1rem;
-}
-.nav-bar .open:hover, .nav-bar .close:hover {
-  color: #ffd740;
-}
-.nav-bar .open span, .nav-bar .close span {
-  font-family: "Source Sans Pro", sans-serif;
-  font-weight: 600;
-  text-transform: uppercase;
-  margin-left: 0.75rem;
-  font-size: 1rem;
-  vertical-align: middle;
-}
-@media (min-width: 1000px) {
-  .nav-bar .open, .nav-bar .close {
-    display: none;
-  }
-}
-.nav-bar .branding {
-  font-weight: 700;
-  padding: 0.5rem 1rem;
-}
-.nav-bar .branding i {
-  font-size: 1.25rem;
-  padding-right: 0.25rem;
-}
-.nav-bar .nav-links {
+.nav-bar .container .nav-links {
   display: none;
   justify-content: center;
 }
 @media (min-width: 1000px) {
-  .nav-bar .nav-links {
+  .nav-bar .container .nav-links {
     display: flex;
   }
 }
-.nav-bar .nav-links a {
+.nav-bar .container .nav-links a {
   font-size: 1.25rem;
   padding: 0.5rem 1rem;
   font-weight: 600;
   color: #ffffff;
 }
-.nav-bar .nav-links a:hover {
+.nav-bar .container .nav-links a:hover {
   color: #ffd740;
 }
-.nav-bar .action-buttons {
+.nav-bar .container .action-buttons {
   display: none;
 }
 @media (min-width: 1000px) {
-  .nav-bar .action-buttons {
+  .nav-bar .container .action-buttons {
     display: flex;
   }
 }
-.nav-bar .action-buttons a, .nav-bar .action-buttons span {
+.nav-bar .container .action-buttons a, .nav-bar .container .action-buttons span {
   background-color: #0077c1;
   color: #42a5f4;
   border-radius: 2px;
@@ -6022,7 +5998,7 @@ h1, h2, h3, h4, h5, h6 {
   margin: 0.5rem;
   list-style: none;
 }
-.nav-bar .action-buttons a:hover, .nav-bar .action-buttons span:hover {
+.nav-bar .container .action-buttons a:hover, .nav-bar .container .action-buttons span:hover {
   background-color: #80d6ff;
   color: #0077c1;
   box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
@@ -6032,16 +6008,16 @@ h1, h2, h3, h4, h5, h6 {
   -o-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
   transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
 }
-.nav-bar .action-buttons a:hover, .nav-bar .action-buttons span:hover {
+.nav-bar .container .action-buttons a:hover, .nav-bar .container .action-buttons span:hover {
   color: black;
 }
-.nav-bar .action-buttons .join {
+.nav-bar .container .action-buttons .join {
   background-color: #ffd740;
 }
-.nav-bar .action-buttons .join:hover {
+.nav-bar .container .action-buttons .join:hover {
   background-color: #ffff74;
 }
-.nav-bar .action-buttons .join p {
+.nav-bar .container .action-buttons .join p {
   font-size: 0.75rem;
   line-height: 1rem;
 }
@@ -6144,6 +6120,41 @@ h1, h2, h3, h4, h5, h6 {
   display: inherit;
 }
 
+.open, .close {
+  -webkit-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  -moz-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  -ms-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  -o-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  cursor: pointer;
+  padding: 0.5rem 1rem;
+}
+.open:hover, .close:hover {
+  color: #ffd740;
+}
+.open span, .close span {
+  font-family: "Source Sans Pro", sans-serif;
+  font-weight: 600;
+  text-transform: uppercase;
+  margin-left: 0.75rem;
+  font-size: 1rem;
+  vertical-align: middle;
+}
+@media (min-width: 1000px) {
+  .open, .close {
+    display: none;
+  }
+}
+
+.branding {
+  font-weight: 700;
+  padding: 0.5rem 1rem;
+}
+.branding i {
+  font-size: 1.25rem;
+  padding-right: 0.25rem;
+}
+
 .site-nav {
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   -webkit-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
@@ -6176,6 +6187,20 @@ h1, h2, h3, h4, h5, h6 {
   text-decoration: none;
 }
 .site-nav .nav-bar {
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  -webkit-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  -moz-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  -ms-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  -o-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  z-index: 1;
+  background-color: #42a5f4;
+  color: #000000;
+  width: 100%;
+  display: flex;
+  font-size: 1.5rem;
+  justify-content: space-between;
+  align-items: center;
   box-shadow: none;
   position: relative;
 }
@@ -6339,7 +6364,17 @@ footer.card {
 }
 .home .tabs {
   width: 100%;
-  margin: 1rem 0;
+  margin: 1rem auto;
+}
+@media (min-width: 800px) {
+  .home .tabs {
+    max-width: 800px;
+  }
+}
+@media (min-width: 1000px) {
+  .home .tabs {
+    max-width: 900px;
+  }
 }
 .home .tabs .card {
   position: relative;
@@ -6481,7 +6516,7 @@ footer.card {
   background: url(../img/checking_boxes.svg) no-repeat center;
   background-size: contain;
 }
-@media (min-width: 1000px) {
+@media (min-width: 800px) {
   .home .tabs .card .carousel .slide .image {
     height: 20rem;
   }
