copy in place. most styles in place. js in place. polish and stretch to come.

--- a/sass/_home.sass
+++ b/sass/_home.sass
@@ -99,8 +99,11 @@
           display: none
           margin: 1rem
           h1
+            font-size: 2rem
             font-weight: 700
-            text-align: left
+            text-align: center
+            line-height: 1rem
+            margin-bottom: 2rem
           p
             margin: 1rem 0
           a
@@ -117,10 +120,52 @@
           .image
             width: 100%
             height: 10rem
-            background: url(../img/checking_boxes.svg) no-repeat center
-            background-size: contain
             +breakpoint(tablet)
               height: 20rem
+          .testimonial
+            //
+          .image.happy-feeling
+            background: url(../img/happy_feeling.svg) no-repeat center
+            background-size: contain
+          .image.accept-request
+            background: url(../img/accept_request.svg) no-repeat center
+            background-size: contain
+          .image.file-bundle
+            background: url(../img/file_bundle.svg) no-repeat center
+            background-size: contain
+          .image.blooming
+            background: url(../img/blooming.svg) no-repeat center
+            background-size: contain
+          .image.timeline
+            background: url(../img/timeline.svg) no-repeat center
+            background-size: contain
+          .image.setup-wizard
+            background: url(../img/setup_wizard.svg) no-repeat center
+            background-size: contain
+          .image.online-friends
+            background: url(../img/online_friends.svg) no-repeat center
+            background-size: contain
+          .image.guillermo
+            background: url(../img/guillermo_malo.jpg) no-repeat center
+            background-size: contain
+          .image.marty
+            background: url(../img/marty_vessels.jpg) no-repeat center
+            background-size: contain
+          .image.michaela
+            background: url(../img/michaela_amadeus.jpg) no-repeat center
+            background-size: contain
+          .image.matheus
+            background: url(../img/matheus_ferrari.jpg) no-repeat center
+            background-size: contain
+          .image.han
+            background: url(../img/han_myo_when.jpg) no-repeat center
+            background-size: contain
+          .image.hyttalo
+            background: url(../img/hyttalo_souzen.jpg) no-repeat center
+            background-size: contain
+          .image.josh
+            background: url(../img/josh_rodrigo.jpg) no-repeat center
+            background-size: contain
         .slide.active
           display: inherit
       .carousel.active
