--- a/css/index.css
+++ b/css/index.css
@@ -5966,13 +5966,21 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 .nav-bar .container .nav-links a {
+  border-radius: 2px;
   font-size: 1.25rem;
-  padding: 0.5rem 1rem;
+  padding: 0.1rem 1rem;
   font-weight: 600;
   color: #ffffff;
+  border-top: 2px solid #42a5f4;
+  border-bottom: 2px solid #42a5f4;
 }
 .nav-bar .container .nav-links a:hover {
   color: #ffd740;
+}
+.nav-bar .container .nav-links .active {
+  color: #ffd740;
+  border-top: 2px solid #ffd740;
+  border-bottom: 2px solid #ffd740;
 }
 .nav-bar .container .action-buttons {
   display: none;
@@ -6209,6 +6217,7 @@ h1, h2, h3, h4, h5, h6 {
   text-align: right;
 }
 .site-nav .nav-links a {
+  border-right: 2px solid #42a5f4;
   -webkit-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
   -moz-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
   -ms-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
@@ -6246,11 +6255,17 @@ h1, h2, h3, h4, h5, h6 {
   -o-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
   transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
 }
+.site-nav .nav-links .active {
+  background-color: #80d6ff;
+  border-radius: 2px;
+  border-right: 2px solid #ffd740;
+  border-left: 2px solid #ffd740;
+}
 .site-nav .action-buttons {
   display: flex;
   align-items: flex-end;
   justify-content: space-around;
-  margin-top: -8rem;
+  margin-top: -4rem;
   margin-bottom: 2rem;
 }
 .site-nav .action-buttons a {
@@ -6473,8 +6488,11 @@ footer.card {
   margin: 1rem;
 }
 .home .tabs .card .carousel .slide h1 {
+  font-size: 2rem;
   font-weight: 700;
-  text-align: left;
+  text-align: center;
+  line-height: 1rem;
+  margin-bottom: 2rem;
 }
 .home .tabs .card .carousel .slide p {
   margin: 1rem 0;
@@ -6513,17 +6531,252 @@ footer.card {
 .home .tabs .card .carousel .slide .image {
   width: 100%;
   height: 10rem;
-  background: url(../img/checking_boxes.svg) no-repeat center;
-  background-size: contain;
 }
 @media (min-width: 800px) {
   .home .tabs .card .carousel .slide .image {
     height: 20rem;
   }
 }
+.home .tabs .card .carousel .slide .image.happy-feeling {
+  background: url(../img/happy_feeling.svg) no-repeat center;
+  background-size: contain;
+}
+.home .tabs .card .carousel .slide .image.accept-request {
+  background: url(../img/accept_request.svg) no-repeat center;
+  background-size: contain;
+}
+.home .tabs .card .carousel .slide .image.file-bundle {
+  background: url(../img/file_bundle.svg) no-repeat center;
+  background-size: contain;
+}
+.home .tabs .card .carousel .slide .image.blooming {
+  background: url(../img/blooming.svg) no-repeat center;
+  background-size: contain;
+}
+.home .tabs .card .carousel .slide .image.timeline {
+  background: url(../img/timeline.svg) no-repeat center;
+  background-size: contain;
+}
+.home .tabs .card .carousel .slide .image.setup-wizard {
+  background: url(../img/setup_wizard.svg) no-repeat center;
+  background-size: contain;
+}
+.home .tabs .card .carousel .slide .image.online-friends {
+  background: url(../img/online_friends.svg) no-repeat center;
+  background-size: contain;
+}
+.home .tabs .card .carousel .slide .image.guillermo {
+  background: url(../img/guillermo_malo.jpg) no-repeat center;
+  background-size: contain;
+}
+.home .tabs .card .carousel .slide .image.marty {
+  background: url(../img/marty_vessels.jpg) no-repeat center;
+  background-size: contain;
+}
+.home .tabs .card .carousel .slide .image.michaela {
+  background: url(../img/michaela_amadeus.jpg) no-repeat center;
+  background-size: contain;
+}
+.home .tabs .card .carousel .slide .image.matheus {
+  background: url(../img/matheus_ferrari.jpg) no-repeat center;
+  background-size: contain;
+}
+.home .tabs .card .carousel .slide .image.han {
+  background: url(../img/han_myo_when.jpg) no-repeat center;
+  background-size: contain;
+}
+.home .tabs .card .carousel .slide .image.hyttalo {
+  background: url(../img/hyttalo_souzen.jpg) no-repeat center;
+  background-size: contain;
+}
+.home .tabs .card .carousel .slide .image.josh {
+  background: url(../img/josh_rodrigo.jpg) no-repeat center;
+  background-size: contain;
+}
 .home .tabs .card .carousel .slide.active {
   display: inherit;
 }
 .home .tabs .card .carousel.active {
   display: inherit;
+}
+
+.eric {
+  background: url("../img/eric_sarragalugo.png") no-repeat center;
+}
+
+.shobhita {
+  background: url("../img/shobhita_vaishnav.jpg") no-repeat center;
+}
+
+.sachin {
+  background: url("../img/sachin_benny.png") no-repeat center;
+}
+
+.tay {
+  background: url("../img/dionuta_tay_burton.jpg") no-repeat center;
+}
+
+.shota {
+  background: url("../img/shota_kikozashvili.png") no-repeat center;
+}
+
+.ed {
+  background: url("../img/edward_reeseg.jpeg") no-repeat center;
+}
+
+.ronald {
+  background: url("../img/ronald_libago.png") no-repeat center;
+}
+
+.bio-pic {
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  -webkit-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  -moz-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  -ms-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  -o-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  background-size: cover;
+  height: 10rem;
+  width: 10rem;
+  border: 0.5rem solid #ffd740;
+  border-radius: 50%;
+  flex-shrink: 0;
+  margin: 1rem 0;
+}
+@media (min-width: 800px) {
+  .bio-pic {
+    margin: 0 1rem;
+  }
+}
+
+.about .header {
+  display: flex;
+  flex-flow: column nowrap;
+  align-content: center;
+  justify-content: flex-end;
+  height: 100vh;
+  margin: 0 0 1rem;
+  padding: 4rem 1rem 1rem;
+  background-color: #ffffff;
+}
+.about .header .header-image {
+  display: block;
+  background: url("../img/notify.svg") no-repeat center;
+  background-size: contain;
+  height: 20rem;
+}
+.about .header p {
+  padding: 1rem;
+  font-size: 2rem;
+  font-weight: 600;
+  text-shadow: 0 0 5px #ffffff;
+}
+@media (min-width: 1000px) {
+  .about .header p {
+    max-width: 800px;
+    margin: 0 auto;
+  }
+}
+.about .header p span {
+  color: #0077c1;
+  text-transform: uppercase;
+  font-weight: 900;
+}
+
+.about .members {
+  padding: 0.25rem;
+  margin: 0.5rem;
+  background-color: #0077c1;
+}
+@media (min-width: 1000px) {
+  .about .members {
+    max-width: 1000px;
+    margin: 0.5rem auto;
+  }
+}
+.about .members .member {
+  margin: 0.5rem;
+  padding: 0.5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+@media (min-width: 800px) {
+  .about .members .member {
+    flex-flow: row nowrap;
+  }
+}
+@media (min-width: 800px) {
+  .about .members .member .bio {
+    text-align: left;
+  }
+}
+.about .members .member .bio .name {
+  font-weight: 900;
+  font-size: 2rem;
+  margin: 0.5rem 0;
+}
+@media (min-width: 800px) {
+  .about .members .member .bio .name {
+    margin: 0.5rem 1rem;
+  }
+}
+.about .members .member .bio .role {
+  font-weight: 600;
+  font-size: 1.75rem;
+}
+@media (min-width: 800px) {
+  .about .members .member .bio .role {
+    margin: 0.5rem 1rem;
+  }
+}
+.about .members .member .bio .bio {
+  font-size: 1.25rem;
+  padding-bottom: 2rem;
+}
+@media (min-width: 800px) {
+  .about .members .member .bio .bio {
+    padding: 0.5rem 1rem;
+  }
+}
+.about .members .member .bio .social-media {
+  padding-bottom: 1rem;
+}
+.about .members .member .bio .social-media a {
+  background-color: #0077c1;
+  color: #42a5f4;
+  border-radius: 2px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  -webkit-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  -moz-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  -ms-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  -o-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  display: inline-block;
+  background-color: #ffd740;
+  color: #0077c1;
+  font-size: 2rem;
+  border-radius: 50%;
+  margin: 0 0.5rem;
+  height: 4rem;
+  width: 4rem;
+  line-height: 4rem;
+}
+.about .members .member .bio .social-media a:hover {
+  background-color: #80d6ff;
+  color: #0077c1;
+  box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
+  -webkit-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  -moz-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  -ms-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  -o-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+}
+@media (min-width: 800px) {
+  .about .members .member .bio .social-media a {
+    text-align: center;
+  }
+}
+.about .members .member .bio .social-media a:hover {
+  background-color: #ffff74;
 }
